--- a/src/components/directory-item/directory-item.styles.scss
+++ b/src/components/directory-item/directory-item.styles.scss
@@ -1,15 +1,4 @@
-$dark: #39393a;
-$light: #e6e6e6;
-$blue: #202c59;
-$green: #297373;
-$yellow: #f18f01;
-$dark: #39393a;
-$light: #e6e6e6;
-$blue: #202c59;
-$green: #297373;
-$yellow: #f18f01;
-
-.category-container {
+.directory-item-container {
   min-width: 30%;
   height: 240px;
   flex: 1 1 auto;
@@ -19,7 +8,6 @@ $yellow: #f18f01;
   border: 1px solid black;
   margin: 0 7.5px 15px;
   overflow: hidden;
-  border-radius: 10px;
 
   &:hover {
     cursor: pointer;
@@ -29,7 +17,7 @@ $yellow: #f18f01;
       transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
     }
 
-    & .category-body-container {
+    & .body {
       opacity: 0.9;
     }
   }
@@ -53,7 +41,7 @@ $yellow: #f18f01;
     background-position: center;
   }
 
-  .category-body-container {
+  .body {
     height: 90px;
     padding: 0 25px;
     display: flex;
@@ -61,9 +49,9 @@ $yellow: #f18f01;
     align-items: center;
     justify-content: center;
     border: 1px solid black;
+    background-color: white;
     opacity: 0.7;
     position: absolute;
-    border-radius: 10px;
 
     h2 {
       font-weight: bold;
